--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+## The following requirements were added by pip freeze:
+backports.functools-lru-cache==1.4
+cycler==0.10.0
 decorator==4.1.2
 graphviz==0.8.1
 imageio==2.2.0
+imposm==2.6.0
+imposm.parser==1.0.7
+matplotlib==2.1.1
 networkx==2.0
 numpy==1.13.3
 olefile==0.44
 pandas==0.21.0
 Pillow==4.3.0
 postman-problems==0.2
+psycopg2==2.7.3.2
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
+Shapely==1.6.3
 six==1.11.0
+subprocess32==3.2.7
 tqdm==4.19.4
